@@ -101,6 +101,9 @@
     <Compile Include="..\SimpleInjector.Extensions.Tests.Unit\BatchRegistrationExtensionsTests.cs">
       <Link>BatchRegistrationExtensionsTests.cs</Link>
     </Compile>
+    <Compile Include="..\SimpleInjector.Extensions.Tests.Unit\DecoratorExtensionsTests.cs">
+      <Link>DecoratorExtensionsTests.cs</Link>
+    </Compile>
     <Compile Include="..\SimpleInjector.Extensions.Tests.Unit\EnumerableExtensions.cs">
       <Link>EnumerableExtensions.cs</Link>
     </Compile>
